Thu Oct 16 01:20:30 1997  Tom Yu  <tlyu@mit.edu>

	* main.c: Change KERBEROS to KRB5_KRB4_COMPAT where appropriate.

	* secure.c: Use <secure.h> rather than "secure.h" so that the
	correct secure.h gets included (the one in the $(srcdir) of the
	directory we're compiling secure.c into).  From danw@mit.edu.

	* ftp.c: Change KERBEROS to KRB5_KRB4_COMPAT where appropriate.
	Re-order the clauses so that that GSSAPI gets tried before
	KERBEROS_V4.

	* Makefile.in: Update LOCALINCLUDE and the link line to DTRT with
	krb4 compatibility.

Sun Aug 17 14:23:39 1997  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (SRCS): Add $(srcdir) where needed.

Wed Apr 30 14:59:03 1997  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* cmds.c (getit): Fix Y2K bug in the parsing of the MDTM command.
		[krb5-appl/399]

Wed Feb  5 20:29:31 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Fri Nov 22 15:48:19 1996  unknown  <bjaspan@mit.edu>

	* ftp.c (hookup): use sizeof instead of h_length to determine
 	number of bytes of addr to copy from DNS response [krb5-misc/211]

Fri Sep 27 16:05:09 1996  Tom Yu  <tlyu@mit.edu>

	* cmds.c (setpeer): Apply jik's fix so "-n" actually works as
	intended.


Tue Sep 10 14:07:15 1996  Tom Yu  <tlyu@mit.edu>

	* ftp.M: remove ".so man1/header.doc"

Fri Aug 16 20:04:03 1996  Sam Hartman  <hartmans@mit.edu>

	* secure.c (nbyte;): Fix for Kerberos IV version of the memory
 	allocation bug I fixed for Kerberos V; you want nbyte +
 	FUDGE_FACTOR, not out_buff.length.

Tue Jul 30 19:45:45 1996  Samuel D Hartman  (hartmans@vorlon)

	* ftp.c (empt resety): Use fd_set as a typedef not a struct.
        Linux breaks.

Mon Jul 29 22:37:23 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* secure.c: Do not assume sizeof(long) = 4 for sending lengths OTW

	* configure.in: Determine sizeof short, int, long for secure.c

Fri Jul 26 20:55:12 1996  Sam Hartman  <hartmans@tertius.mit.edu>
